--- a/class-app/src/App.css
+++ b/class-app/src/App.css
@@ -93,8 +93,8 @@
 .bounceInLeft {
   -webkit-animation-name: slideInLeft;
   animation-name: slideInLeft;
-  -webkit-animation-duration: 12;
-  animation-duration: 12s;
+  -webkit-animation-duration: 20s;
+  animation-duration: 20s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
   }
